fixed share btn not centered

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2828,21 +2828,23 @@
 
   .share-btn-container {
     margin-bottom: 2em;
-    display: flex;
+	  display: flex;
   }
 
   .share-btn-container a {
     margin-right: 1em;
+    display: flex;
+	  justify-content: center;
+    align-items: center;
   }
 
 	.share-btn {
-	  display: inline-block;
-	  color: #ffffff;
-	  border-radius: 100%;
-	  text-align: center;
-    height: 30px;
-    width: 30px;
-    background-color: rgba(51, 51, 51, 0.6);
+		display: inline-block;
+		color: #ffffff;
+		border-radius: 100%;
+		height: 33px;
+		width: 33px;
+		background-color: rgba(51, 51, 51, 0.6);
 	}
 
 	.share-btn:hover {
